using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StringConstants {
    public const string ApplyDamage = "ApplyDamage";
    public const string ShouldMove = "ShouldMove";
    public const string ShouldAttack = "ShouldAttack";
    public const string ShouldIdle = "ShouldIdle";
}
